force-app/main/default/objects/Quota_Template__c/Quota_Template__c.object-meta.xml
<CustomObject>
    <description>Stores quota allocation templates with period-level targets for incentive plans.</description>
    <label>Quota Template</label>
    <nameField><label>Quota Template Name</label><type>Text</type></nameField>
    <pluralLabel>Quota Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>