force-app/main/default/objects/Quota_Template__c/fields/Annual_Target__c.field-meta.xml
<CustomField>
    <fullName>Annual_Target__c</fullName>
    <label>Annual Target</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>