force-app/main/default/objects/Quota_Template__c/fields/Cloned_From__c.field-meta.xml
<CustomField>
    <fullName>Cloned_From__c</fullName>
    <label>Cloned From</label>
    <type>Lookup</type>
    <referenceTo>Quota_Template__c</referenceTo>
    <relationshipLabel>Cloned Quota Templates</relationshipLabel>
    <relationshipName>Cloned_Quota_Templates</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>