force-app/main/default/objects/Quota_Template__c/fields/Distribution_Method__c.field-meta.xml
<CustomField>
    <fullName>Distribution_Method__c</fullName>
    <label>Distribution Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Equal</fullName><default>false</default><label>Equal</label></value>
            <value><fullName>Weighted</fullName><default>false</default><label>Weighted</label></value>
            <value><fullName>Custom</fullName><default>false</default><label>Custom</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>