force-app/main/default/objects/Quota_Template__c/fields/Eligible_Roles__c.field-meta.xml
<CustomField>
    <fullName>Eligible_Roles__c</fullName>
    <description>Comma-separated role codes</description>
    <label>Eligible Roles</label>
    <length>255</length>
    <type>Text</type>
</CustomField>