force-app/main/default/objects/Quota_Template__c/fields/Metric__c.field-meta.xml
<CustomField>
    <fullName>Metric__c</fullName>
    <label>Metric</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Primary</fullName><default>false</default><label>Primary</label></value>
            <value><fullName>Secondary</fullName><default>false</default><label>Secondary</label></value>
            <value><fullName>Custom_1</fullName><default>false</default><label>Custom 1</label></value>
            <value><fullName>Custom_2</fullName><default>false</default><label>Custom 2</label></value>
            <value><fullName>Custom_3</fullName><default>false</default><label>Custom 3</label></value>
            <value><fullName>Custom_4</fullName><default>false</default><label>Custom 4</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>