force-app/main/default/objects/Quota_Template__c/fields/Period_10_Target__c.field-meta.xml
<CustomField>
    <fullName>Period_10_Target__c</fullName>
    <label>Period 10 Target</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>