force-app/main/default/objects/Quota_Template__c/fields/Period_Type__c.field-meta.xml
<CustomField>
    <fullName>Period_Type__c</fullName>
    <label>Period Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Monthly</fullName><default>false</default><label>Monthly</label></value>
            <value><fullName>Quarterly</fullName><default>false</default><label>Quarterly</label></value>
            <value><fullName>Semi_Annual</fullName><default>false</default><label>Semi-Annual</label></value>
            <value><fullName>Annual</fullName><default>false</default><label>Annual</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>