force-app/main/default/objects/Quota_Template__c/fields/Plan_Template__c.field-meta.xml
<CustomField>
    <fullName>Plan_Template__c</fullName>
    <label>Plan Template</label>
    <type>Lookup</type>
    <referenceTo>Incentive_Plan_Template__c</referenceTo>
    <relationshipLabel>Quota Templates</relationshipLabel>
    <relationshipName>Quota_Templates</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>