force-app/main/default/objects/Quota_Template__c/fields/Plan_Year__c.field-meta.xml
<CustomField>
    <fullName>Plan_Year__c</fullName>
    <label>Plan Year</label>
    <type>Lookup</type>
    <referenceTo>Plan_Year__c</referenceTo>
    <relationshipLabel>Quota Templates</relationshipLabel>
    <relationshipName>Quota_Templates_Year</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>