force-app/main/default/objects/Quota_Template__c/fields/Territory__c.field-meta.xml
<CustomField>
    <fullName>Territory__c</fullName>
    <label>Territory</label>
    <type>Lookup</type>
    <referenceTo>Territory__c</referenceTo>
    <relationshipLabel>Quota Templates</relationshipLabel>
    <relationshipName>Quota_Templates_Territory</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>